# solana-json

./: .ammanrc.js  .solitarc.js  package.json
.crates/: .crates2.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  state.rs
program/src/processor/: add_authority.rs  append_value.rs  close.rs  initialize.rs  mod.rs  remove_authority.rs  set_value.rs
