[package]
name = "solana-json"
description = "On chain JSON storage for Solana"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
solana-program = "1.14.18"
shank = "0.0.12"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
serde_json = { version = "1.0.96", features = ["std"]}
mpl-utils = "0.2.0"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.14.18"
solana-sdk = "=1.14.18"
solana-validator = "=1.14.18"
solana-logger = "=1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
